--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,7 +1,7 @@
 server {
 
     listen 80;
-    server_name 0.0.0.0:5000;
+    # server_name 0.0.0.0:5000;
 
     location / {
         include uwsgi_params;
