--- a/docker-compose.uat.yml
+++ b/docker-compose.uat.yml
@@ -11,6 +11,8 @@ services:
 #        volumes:
 #            - ./data/postgres/data:/var/lib/postgresql/data
         restart: always
+    redis-server:
+        image: redis:6.0-rc3-buster
     app:
         build:
             dockerfile: Dockerfile
@@ -21,24 +23,24 @@ services:
             - "5000:5000"
         environment:
             - DEBUG=True
-            - REDIS_HOST=multi-docker-redis.dhfy4f.0001.euw2.cache.amazonaws.com
+            - REDIS_HOST=redis-server
             - PGUSER=postgres
             - PGHOST=postgres
             - PGDATABASE=postgres
             - PGPASSWORD=postgres_password
             - PGPORT=5432
-            - ENV=prod
+            - ENV=dev
         volumes:
             - ./flaskr:/app
-    worker:
-        build:
-            dockerfile: Dockerfile
-            context: './flaskr'
-        command: python worker.py
-        environment:
-            - REDIS_HOST=multi-docker-redis.dhfy4f.0001.euw2.cache.amazonaws.com:
-        volumes:
-            - ./flaskr:/app
+#    worker:
+#        build:
+#            dockerfile: Dockerfile
+#            context: './flaskr'
+#        command: python worker.py
+#        environment:
+#            - REDIS_HOST=multi-docker-redis.dhfy4f.0001.euw2.cache.amazonaws.com:
+#        volumes:
+#            - ./flaskr:/app
     nginx:
         build:
             dockerfile: Dockerfile
@@ -48,13 +50,13 @@ services:
         restart: always
         ports:
         - "80:80"
-#    worker:
-#        build:
-#            dockerfile: Dockerfile
-#            context: './worker'
-#        volumes:
-#            - ./worker:/app
-#        environment:
-#            - REDIS_HOST=redis-flaskr
+    worker:
+        build:
+            dockerfile: Dockerfile
+            context: './worker'
+        volumes:
+            - ./worker:/app
+        environment:
+            - REDIS_HOST=redis-server
 
 
