--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -13,6 +13,18 @@ services:
         restart: always
     redis-server:
         image: redis:6.0-rc3-buster
+#        hostname: redis-server
+        ports:
+            - "6379:6379"
+    redis-worker:
+        image: redis:6.0-rc3-buster
+        command: --port 6380
+#        hostname: redis-worker
+        depends_on:
+            - redis-server
+        ports:
+            - "6380:6380"
+        restart: always
 #        volumes:
 #            - ./data/redis:/data
     app:
@@ -21,13 +33,17 @@ services:
             context: './flaskr'
         depends_on:
             - redis-server
+            - redis-worker
             - postgres
             - worker
         ports:
             - "5000:5000"
         environment:
             - DEBUG=True
-            - REDIS_HOST=redis-server
+            - REDIS_SERVER_HOST=redis-server
+            - REDIS_SERVER_PORT=6379
+            - REDIS_WORKER_HOST=redis-worker
+            - REDIS_WORKER_PORT=6380
             - PGUSER=postgres
             - PGHOST=postgres
             - PGDATABASE=postgres
@@ -44,9 +60,12 @@ services:
             context: './flaskr'
         command: python worker.py
         depends_on:
-          - redis-server
+          - redis-worker
         environment:
-            - REDIS_HOST=redis-server
+            - REDIS_SERVER_HOST=redis-server
+            - REDIS_SERVER_PORT=6379
+            - REDIS_WORKER_HOST=redis-worker
+            - REDIS_WORKER_PORT=6380
         volumes:
             - ./flaskr:/app
     nginx:
@@ -58,6 +77,8 @@ services:
         restart: always
         ports:
         - "80:80"
+
+#      driver: "bridge"
 #    worker:
 #        build:
 #            dockerfile: Dockerfile
