--- a/flaskr/uwsgi.ini
+++ b/flaskr/uwsgi.ini
@@ -4,8 +4,8 @@ callable = app
 enable-threads = true
 
 socket = :5000
-;processes = 4
-;threads = 2
+processes = 4
+threads = 2
 master = true
 chmod-socket = 660
 vacuum = true
